--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "cargo-rebuild"
 version = "0.1.0"
 authors = ["Jonathan Samson <jonathansamsonvcu@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/samsonjj/cargo-rebuild"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
